# EasyAF3Config

./: LICENSE  README.md  pyproject.toml
src/easyaf3config/: __init__.py
src/easyaf3config/cli/: __init__.py  fa2json.py
src/easyaf3config/core/: __init__.py  config.py  sequence.py
src/easyaf3config/utils/: __init__.py  fasta.py
tests/: __init__.py  test_config.py  test_fasta.py  test_sequence.py
